SoK 2021 Status Reports

--- a/layouts/shortcodes/mastobutton.html
+++ b/layouts/shortcodes/mastobutton.html
@@ -1,3 +1,4 @@
+<!-- This content has been taken from https://github.com/grayleonard/mastodon-share -->
 <div id="mastobutton">
     <div class="mast-share mast-share-lg">
         <input type="checkbox" class="mast-check-toggle" id="mast-check-toggle-0">
