New Posts: Season of KDE, Primavera, Espinas...

--- a/layouts/shortcodes/mastobutton.html
+++ b/layouts/shortcodes/mastobutton.html
@@ -1,4 +1,4 @@
-<!-- This content has been taken from https://github.com/grayleonard/mastodon-share -->
+<!-- This content has been taken from https://github.com/grayleonard/mastodon-share GNU Affero General Public License v3.0 on GitHub -->
 <div id="mastobutton">
     <div class="mast-share mast-share-lg">
         <input type="checkbox" class="mast-check-toggle" id="mast-check-toggle-0">
